<resources>
    <string name="app_name">Fastrack.Edu</string>
    <string name="slogan">Pandu Suksesmu dengan Fastrack.Edu!</string>
    <string name="title_activity_bottom_navigation_bar">BottomNavigationBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_notifications">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_lms">LMS</string>
    <string name="title_event">Event</string>
    <string name="title_profile">Profil</string>
    <string name="app_name_launcher">Fastrack.Edu</string>
    <string name="title_email">Email</string>
    <string name="hint_input_email">youremail@gmail.com</string>
    <string name="title_password">Password</string>
    <string name="sign_in_main_headline">Masuk</string>
    <string name="sign_in_secondary_headline">Ayo, lanjutkan belajar dengan kami. Masuk sekarang untuk akses cepat ke semua materi dan fitur favorit Anda</string>
    <string name="title_sign_in">Masuk</string>
    <string name="sign_in_sub_headline_2">Daftar</string>
    <string name="sign_in_sub_headline_1">Belum memiliki akun?</string>
    <string name="sub_headline_or">Atau masuk dengan</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="register_main_headline">Daftar</string>
    <string name="register_secondary_headline">Mulai perjalanan belajar Anda hari ini dan raih prestasi bersama FastTrack.Edu</string>
    <string name="title_confirm_password">Konfirmasi Password</string>
    <string name="register_sub_headline_1">Sudah memiliki akun?</string>
    <string name="register_sub_headline_2">Masuk</string>
    <string name="logout_title">Keluar</string>
    <string name="username">Ginanjar Putra</string>
    <string name="title_name">Nama</string>
    <string name="hint_input_name">Masukkan nama anda</string>
    <string name="accept_terms_and_conditions">Saya telah setuju</string>
    <string name="terms_condition">Syarat dan ketentuan</string>
    <string name="selamat_datang_di_fastrackedu">Selamat datang di FastrackEdu!</string>
    <string name="syarat_dan_ketentuan_berikut_mengatur_penggunaan_aplikasi_belajar_online_fastrackedu_dan_layanan_yang_kami_sediakan_dengan_mengakses_atau_menggunakan_layanan_kami_anda_setuju_untuk_mematuhi_syarat_dan_ketentuan_ini">Syarat dan Ketentuan berikut mengatur penggunaan aplikasi belajar online FastrackEdu dan layanan yang kami sediakan. Dengan mengakses atau menggunakan layanan kami, Anda setuju untuk mematuhi syarat dan ketentuan ini.</string>
    <string name="_1_penerimaan_syarat_dan_ketentuan">1. Penerimaan Syarat dan Ketentuan</string>
    <string name="_1_1_dengan_mendaftar_dan_menggunakan_layanan_fastrackedu_anda_setuju_untuk_terikat_dengan_syarat_dan_ketentuan_ini_jika_anda_tidak_setuju_dengan_syarat_dan_ketentuan_ini_harap_jangan_gunakan_layanan_kami">1.1 Dengan mendaftar dan menggunakan layanan FastrackEdu, Anda setuju untuk terikat dengan syarat dan ketentuan ini. Jika Anda tidak setuju dengan syarat dan ketentuan ini, harap jangan gunakan layanan kami.</string>
    <string name="_2_penggunaan_layanan">2. Penggunaan Layanan</string>
    <string name="_2_1_anda_setuju_untuk_menggunakan_layanan_kami_hanya_untuk_tujuan_yang_sah_dan_sesuai_dengan_hukum_yang_berlaku">2.1 Anda setuju untuk menggunakan layanan kami hanya untuk tujuan yang sah dan sesuai dengan hukum yang berlaku.</string>
    <string name="_3_akun_pengguna">3. Akun Pengguna</string>
    <string name="_3_1_anda_harus_membuat_akun_untuk_mengakses_fitur_tertentu_dari_layanan_kami_3_2_anda_bertanggung_jawab_atas_kerahasiaan_informasi_akun_anda_dan_semua_aktivitas_yang_terjadi_di_bawah_akun_anda_3_3_anda_setuju_untuk_memberikan_informasi_yang_akurat_lengkap_dan_terbaru_saat_mendaftar_dan_menggunakan_akun_anda">3.1 Anda harus membuat akun untuk mengakses fitur tertentu dari layanan kami. 3.2 Anda bertanggung jawab atas kerahasiaan informasi akun Anda dan semua aktivitas yang terjadi di bawah akun Anda. 3.3 Anda setuju untuk memberikan informasi yang akurat, lengkap, dan terbaru saat mendaftar dan menggunakan akun Anda.</string>
    <string name="_4_pembelian_course">4. Pembelian Course</string>
    <string name="_4_1_anda_dapat_membeli_course_melalui_aplikasi_kami_harga_dan_ketersediaan_course_dapat_berubah_sewaktu_waktu_tanpa_pemberitahuan_4_2_anda_setuju_untuk_tidak_menggunakan_layanan_kami_untuk_melakukan_tindakan_yang_melanggar_hak_cipta_privasi_atau_hak_hak_lainnya_dari_pihak_ketiga">4.1 Anda dapat membeli course melalui aplikasi kami. Harga dan ketersediaan course dapat berubah sewaktu-waktu tanpa pemberitahuan. 4.2 Anda setuju untuk tidak menggunakan layanan kami untuk melakukan tindakan yang melanggar hak cipta, privasi, atau hak-hak lainnya dari pihak ketiga.</string>
    <string name="_5_hak_kekayaan_intelektual">5. Hak Kekayaan Intelektual</string>
    <string name="_6_privasi">6. Privasi</string>
    <string name="_5_1_semua_konten_yang_tersedia_di_aplikasi_kami_termasuk_teks_gambar_video_dan_materi_kursus_adalah_milik_fastrackedu_atau_pemberi_lisensinya_5_2_anda_tidak_diperbolehkan_menyalin_mendistribusikan_atau_menggunakan_konten_kami_tanpa_izin_tertulis_dari_kami">5.1 Semua konten yang tersedia di aplikasi kami, termasuk teks, gambar, video, dan materi kursus, adalah milik FastrackEdu atau pemberi lisensinya. 5.2 Anda tidak diperbolehkan menyalin, mendistribusikan, atau menggunakan konten kami tanpa izin tertulis dari kami.</string>
    <string name="_7_batasan_tanggung_jawab">7. Batasan Tanggung Jawab</string>
    <string name="_6_1_kami_menghargai_privasi_anda_dan_berkomitmen_untuk_melindungi_informasi_pribadi_anda_sesuai_dengan_kebijakan_privasi_kami_6_2_dengan_menggunakan_layanan_kami_anda_menyetujui_pengumpulan_dan_penggunaan_informasi_anda_sebagaimana_diuraikan_dalam_kebijakan_privasi_kami">6.1 Kami menghargai privasi Anda dan berkomitmen untuk melindungi informasi pribadi Anda sesuai dengan kebijakan privasi kami. 6.2 Dengan menggunakan layanan kami, Anda menyetujui pengumpulan dan penggunaan informasi Anda sebagaimana diuraikan dalam kebijakan privasi kami.</string>
    <string name="_7_1_fastrackedu_tidak_bertanggung_jawab_atas_kerusakan_langsung_tidak_langsung_insidental_atau_konsekuensial_yang_timbul_dari_penggunaan_atau_ketidakmampuan_untuk_menggunakan_layanan_kami_7_2_kami_tidak_menjamin_bahwa_layanan_kami_akan_bebas_dari_kesalahan_gangguan_atau_virus">7.1 FastrackEdu tidak bertanggung jawab atas kerusakan langsung, tidak langsung, insidental, atau konsekuensial yang timbul dari penggunaan atau ketidakmampuan untuk menggunakan layanan kami. 7.2 Kami tidak menjamin bahwa layanan kami akan bebas dari kesalahan, gangguan, atau virus.</string>
    <string name="_8_1_kami_berhak_untuk_mengubah_syarat_dan_ketentuan_ini_kapan_saja_perubahan_akan_berlaku_segera_setelah_diposting_di_aplikasi_kami_8_2_anda_setuju_untuk_secara_berkala_meninjau_syarat_dan_ketentuan_ini_untuk_memastikan_bahwa_anda_menyadari_setiap_perubahan">8.1 Kami berhak untuk mengubah syarat dan ketentuan ini kapan saja. Perubahan akan berlaku segera setelah diposting di aplikasi kami. 8.2 Anda setuju untuk secara berkala meninjau syarat dan ketentuan ini untuk memastikan bahwa Anda menyadari setiap perubahan.</string>
    <string name="_8_perubahan_syarat_dan_ketentuan">8. Perubahan Syarat dan Ketentuan</string>
    <string name="_9_1_syarat_dan_ketentuan_ini_diatur_dan_ditafsirkan_sesuai_dengan_hukum_republik_indonesia_tanpa_memperhatikan_pertentangan_prinsip_prinsip_hukumnya">9.1 Syarat dan ketentuan ini diatur dan ditafsirkan sesuai dengan hukum Republik Indonesia, tanpa memperhatikan pertentangan prinsip-prinsip hukumnya.</string>
    <string name="_9_hukum_yang_berlaku">9. Hukum yang Berlaku</string>
    <string name="setuju">Setuju</string>
    <string name="batal">Batal</string>
    <string name="saya_telah_setuju_dengan_syarat_dan_ketentuan">Saya telah setuju dengan Syarat dan Ketentuan</string>
    <string name="title_register">Daftar</string>
    <string name="video_lesson_populer">Video Lesson Populer</string>
    <string name="view_more">Lihat semua</string>
    <string name="event_populer">Event Terkini</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="video_lesson">Video Lesson</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="title_empty_data">Anda Belum Bergabung Keprogram Fastrack.Edu</string>
    <string name="description_empty_data">Silahkan pilih program dan mulai perjalan prestasimu bersama Fastrack.Edu</string>
    <string name="event">Detail Event</string>
</resources>