<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_lms"
        android:icon="@drawable/ic_lms"
        android:title="@string/title_lms" />
    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_event"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>